fixed table alignment

--- a/src/css/kui.css
+++ b/src/css/kui.css
@@ -2446,4 +2446,5 @@ div.number-danger {
 .active-bg-info {
   background-color: #ecf5ff;
   color: #409EFF!important;
+  border-bottom: 2px solid #409EFF;
 }
