--- a/src/css/sdic-override.css
+++ b/src/css/sdic-override.css
@@ -335,12 +335,7 @@ html:not([dir="rtl"]) .sidebar .btn-toggler{
     background-color: #FAFAFA;
     font-size: 14px;
 }
-.table .thead-light th:nth-child(n+2){
-    text-align: left !important;
-}
-.table tr td:nth-child(n+2){
-    text-align: left !important;
-}
+
 .table td .pl-2{
     padding-left: 0 !important;
 }
